// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkipLink is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiSkipLink testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-s-fill-primary-euiSkipLink-euiScreenReaderOnly"
  data-test-subj="test subject string"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate"
    >
      Skip
    </span>
  </span>
</a>
`;

exports[`EuiSkipLink props position absolute is rendered 1`] = `
<a
  class="euiSkipLink emotion-euiButtonDisplay-s-defaultMinWidth-s-fill-primary-euiSkipLink-absolute-euiScreenReaderOnly"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</a>
`;

exports[`EuiSkipLink props position fixed is rendered 1`] = `
<a
  class="euiSkipLink emotion-euiButtonDisplay-s-defaultMinWidth-s-fill-primary-euiSkipLink-fixed-euiScreenReaderOnly"
  href="#somewhere"
  rel="noreferrer"
  tabindex="0"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</a>
`;

exports[`EuiSkipLink props position static is rendered 1`] = `
<a
  class="euiSkipLink emotion-euiButtonDisplay-s-defaultMinWidth-s-fill-primary-euiSkipLink-euiScreenReaderOnly"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</a>
`;

exports[`EuiSkipLink props tabIndex is rendered 1`] = `
<a
  class="euiSkipLink emotion-euiButtonDisplay-s-defaultMinWidth-s-fill-primary-euiSkipLink-euiScreenReaderOnly"
  href="#somewhere"
  rel="noreferrer"
  tabindex="-1"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</a>
`;
